--- a/css/slides.css
+++ b/css/slides.css
@@ -79,6 +79,8 @@
   font-size: 22px;
   padding: 24px 28px;
   line-height: 1.5;
+  white-space: pre;
+  overflow-x: auto;
 }
 
 .slide[data-type="code-example"] {
